--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -54,6 +54,6 @@ jobs:
           name: plan
           path: ${{ github.workspace }}
       - name: Terraform init
-        run: terraform init
+        run: terraform init -backend-config="resource_group_name=${RESOURCE_GROUP_NAME}" -backend-config="storage_account_name=${STORAGE_ACCOUNT_NAME}" -backend-config="container_name=${CONTAINER_NAME}"
       - name: Terraform apply
         run: terraform apply ${{ github.workspace }}/main.tfplan
